@@ -1,6 +1,10 @@
 breeze-gtk (5.5.5-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Philip Muškovac ]
   * New upstream bugfix release
+
+  [ Clive Johnston ]
+  * Adding dh_fixperms to rules to make scripts executable 
 
  -- Philip Muškovac <yofel@kubuntu.org>  Tue, 08 Mar 2016 22:26:36 +0100
 
